--- a/docs/modules/trino/pages/usage-guide/security.adoc
+++ b/docs/modules/trino/pages/usage-guide/security.adoc
@@ -1,6 +1,6 @@
 = Security
 
-This page covers <<Authentication>> and <<Authorization>>.
+This page covers <<authentication,authentication>> and <<authorization,authorization>>.
 
 == [[authentication]]Authentication
 
@@ -96,32 +96,36 @@ include::example$usage-guide/trino-oidc-auth-snippet.yaml[tag=trino]
 
 == [[authorization]]Authorization
 
-In order to authorize Trino via OPA, a ConfigMap containing a rego rule package for Trino has to be applied and referenced in the TrinoCluster resource.
-The following example is an all-access Rego rule for testing with the user `admin`. Do not use it in production!
+In order to authorize Trino via xref:opa:index.adoc[OPA], a ConfigMap containing a rego rule package for Trino has to be applied and referenced in the TrinoCluster resource.
+The following example is an all-access Rego rule for testing with the user `admin`.
+Do not use it in production!
 The rego rules below are written using Rego V1 to be compatible with the OPA v1.0.0 release.
 
 NOTE: Due to changes in the Trino OPA authorizer, rego rules differ between version 414, 428 and newer versions.
 
-=== Rego for Trino version 414
-
+[tabs]
+====
+414::
++
 [source,yaml]
 ----
 include::example$usage-guide/opa-bundle-trino-cm-414.yaml[]
 ----
 
-=== Rego for Trino version 428
-
+428::
++
 [source,yaml]
 ----
 include::example$usage-guide/opa-bundle-trino-cm-428.yaml[]
 ----
 
-=== Rego for Trino version 442
-
+442::
++
 [source,yaml]
 ----
 include::example$usage-guide/opa-bundle-trino-cm-new.yaml[]
 ----
+====
 
 Reference the package in the Trino cluster:
 
