--- a/docs/modules/trino/pages/usage_guide/monitoring.adoc
+++ b/docs/modules/trino/pages/usage_guide/monitoring.adoc
@@ -1,5 +1,5 @@
 = Monitoring
 
 The managed Trino instances are automatically configured to export Prometheus metrics. See
-xref:home:operators:monitoring.adoc[] for more details.
+xref:operators:monitoring.adoc[] for more details.
 
