--- a/docs/modules/trino/pages/usage_guide/log_aggregation.adoc
+++ b/docs/modules/trino/pages/usage_guide/log_aggregation.adoc
@@ -22,4 +22,4 @@ spec:
 Currently, the logs are collected only for `server.log`. Logging for `http-request.log` is disabled by default.
 
 Further information on how to configure logging, can be found in
-xref:home:concepts:logging.adoc[].
+xref:concepts:logging.adoc[].
