--- a/docs/modules/trino/pages/usage-guide/connect_to_trino.adoc
+++ b/docs/modules/trino/pages/usage-guide/connect_to_trino.adoc
@@ -29,7 +29,7 @@ The `--insecure` flag ignores the server TLS certificate and is required in this
 $ java -jar ~/Downloads/trino-cli-403-executable.jar --server https://85.215.195.29:8443 --user admin --password --insecure
 ----
 
-TIP: In case you are using OpenID connect, use `--external-authentication` instead of `--user admin --password`. A browser window will be opened, which might require you to log in.
+TIP: In case you are using OpenID connect, use `--external-authentication` instead of `--password`. A browser window will be opened, which might require you to log in. Please note that you still need to pass the `--user` argument because of https://github.com/trinodb/trino/issues/11547[this Trino issue].
 
 == Connect with DBeaver
 
